// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel css inline babel 6 custom instance 1`] = `
"
import { css as lol } from 'my-emotion-instance';
/*#__PURE__*/lol('color:hotpink;');"
`;

exports[`babel css inline babel 6 custom instance relative 1`] = `
"
import { css as lol } from './my-emotion-instance';
/*#__PURE__*/lol('color:hotpink;');"
`;

exports[`babel css inline babel 6 custom instance relative complex 1`] = `
"
import { css as lol } from '../test/my-emotion-instance';
/*#__PURE__*/lol('color:hotpink;');"
`;

exports[`babel css inline babel 6 label format with filename and local 1`] = `
"import { css as _css } from 'emotion';

let cls = /*#__PURE__*/_css({
    name: '1wg0g17-my-css-css-test-cls',
    styles: 'color:hotpink;label:my-css-css-test-cls;'
});"
`;

exports[`babel css inline babel 6 label format with filename that is index and local 1`] = `
"import { css as _css } from 'emotion';

let cls = /*#__PURE__*/_css({
    name: '1uf5d32-my-css-some-directory-cls',
    styles: 'color:hotpink;label:my-css-some-directory-cls;'
});"
`;

exports[`babel css inline babel 6 label format with only local 1`] = `
"import { css as _css } from 'emotion';

let cls = /*#__PURE__*/_css({
    name: '1xiywpm-my-css-cls',
    styles: 'color:hotpink;label:my-css-cls;'
});"
`;

exports[`babel css inline babel 7 custom instance 1`] = `
"import { css as lol } from 'my-emotion-instance';

/*#__PURE__*/
lol(\\"color:hotpink;\\");"
`;

exports[`babel css inline babel 7 custom instance relative 1`] = `
"import { css as lol } from './my-emotion-instance';

/*#__PURE__*/
lol(\\"color:hotpink;\\");"
`;

exports[`babel css inline babel 7 custom instance relative complex 1`] = `
"import { css as lol } from '../test/my-emotion-instance';

/*#__PURE__*/
lol(\\"color:hotpink;\\");"
`;

exports[`babel css inline babel 7 label format with filename and local 1`] = `
"import { css as _css } from \\"emotion\\";

let cls =
/*#__PURE__*/
_css({
  name: \\"1wg0g17-my-css-css-test-cls\\",
  styles: \\"color:hotpink;label:my-css-css-test-cls;\\"
});"
`;

exports[`babel css inline babel 7 label format with filename that is index and local 1`] = `
"import { css as _css } from \\"emotion\\";

let cls =
/*#__PURE__*/
_css({
  name: \\"1uf5d32-my-css-some-directory-cls\\",
  styles: \\"color:hotpink;label:my-css-some-directory-cls;\\"
});"
`;

exports[`babel css inline babel 7 label format with only local 1`] = `
"import { css as _css } from \\"emotion\\";

let cls =
/*#__PURE__*/
_css({
  name: \\"1xiywpm-my-css-cls\\",
  styles: \\"color:hotpink;label:my-css-cls;\\"
});"
`;
